--- a/css/styles.css
+++ b/css/styles.css
@@ -16,21 +16,19 @@ a { text-decoration: none;}
 
 
 .logo {
-    font-family: Raleway;
-    font-style: normal;
+    font-family: Raleway;    
     font-weight: bold;
     font-size: 26px;
-    line-height: 31px;
+    line-height: 1.2;
     letter-spacing: 0.03em;
     color: var(--accent-color);  
 }
 
 .studio {
-    font-family: Raleway;
-    font-style: normal;
+    font-family: Raleway;    
     font-weight: bold;
     font-size: 26px;
-    line-height: 31px;
+    line-height: 1.2;
     letter-spacing: 0.03em;
     color: #000000;
 }
@@ -40,14 +38,13 @@ a { text-decoration: none;}
     list-style: none;
 }
 
-.auth-nav, 
+.auth-nav,
 .site-nav, 
 .nav-link, 
 .link {
-    font-family: Roboto;
-    font-weight: 500px;
+    font-weight: 500;
     font-size: 14px;
-    line-height: 16px;
+    line-height: 1.15;
     letter-spacing: 0.02em;
     color: var(--primary-text-color);
 }
@@ -58,7 +55,11 @@ a { text-decoration: none;}
 
 .mail-link,
 .tel-link {
-    color: var(--primary-text-color);
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.02em;
+    color: #757575;
 }
 
 .mail-link:hover,
@@ -76,10 +77,9 @@ a { text-decoration: none;}
 }
 
 .hero-title {
-    font-family: Roboto;
-    font-weight: 900px;
+    font-weight: 900;
     font-size: 44px;
-    line-height: 60px;
+    line-height: 1.36;
     letter-spacing: 0.06em;
     text-transform: uppercase;
     color: var(--primary-white-color);
@@ -88,6 +88,14 @@ a { text-decoration: none;}
 .button {
     background-color: var(--accent-color);
     color: var(--primary-white-color);
+    position: absolute;
+    width: 145px;
+    height: 38px;
+    left: 712px;
+    top: 174px;
+
+    background: #F5F4FA;
+    border-radius: 4px;
     }
 
 .button:hover {
@@ -100,48 +108,40 @@ a { text-decoration: none;}
 }
 
 .title {
-    font-family: Roboto;
     font-weight: bold;
     font-size: 14px;
-    line-height: 16px;
+    line-height: 1.14;
     letter-spacing: 0.03em;
     text-transform: uppercase;
     color: var(--primary-text-color);
 }
 
 .text {
-    font-family: Roboto;
-    font-weight: normal;
     font-size: 14px;
-    line-height: 24px;
+    line-height: 1.71;
     letter-spacing: 0.03em;
     color: #757575;
 }
 
 .section-title {
-    font-family: Roboto;
-    font-style: normal;
     font-weight: bold;
     font-size: 36px;
-    line-height: 42px;
+    line-height: 1.17;
     letter-spacing: 0.03em;
     color: var(--primary-text-color);
 }
 
 .foto-title {
-    font-family: Roboto;
-    font-weight: 500;
+    font-weight: 700;
     font-size: 16px;
-    line-height: 19px;
+    line-height: 1.2;
     letter-spacing: 0.03em;
     color: var(--primary-text-color);
 }
 
 .foto-discription {
-    font-family: Roboto;
-    font-weight: normal;
     font-size: 16px;
-    line-height: 19px;
+    line-height: 1.2;
     letter-spacing: 0.03em;
     color: #757575;
 }
@@ -154,7 +154,7 @@ a { text-decoration: none;}
     font-family: Raleway;
     font-weight: bold;
     font-size: 26px;
-    line-height: 31px;
+    line-height: 1.2;
     letter-spacing: 0.03em;
     color: #2196F3;
 }
@@ -163,26 +163,22 @@ a { text-decoration: none;}
     font-family: Raleway;
     font-weight: bold;
     font-size: 26px;
-    line-height: 31px;
+    line-height: 1.2;
     letter-spacing: 0.03em;
     color: var(--primary-white-color);
 }
 
 .address {
-    font-family: Roboto;
     font-style: normal;
-    font-weight: normal;
     font-size: 14px;
-    line-height: 24px;
+    line-height: 1.71;
     letter-spacing: 0.03em;
     color: var(--primary-white-color);
 }
 
 .footer-list {
-    font-family: Roboto;
-    font-weight: normal;
     font-size: 14px;
-    line-height: 24px;
+    line-height: 1.71;
     letter-spacing: 0.03em;
     color: rgba(255, 255, 255, 0.6);
 }
@@ -193,10 +189,9 @@ button:hover {
 }
 
 .works-list-item {
-    font-family: Roboto;
     font-weight: 500;
     font-size: 16px;
-    line-height: 26px;
+    line-height: 1.6;
     letter-spacing: 0.03em;
     color: var(--primary-text-color);
 }
